2005-01-09  Gary Cramblitt (PhantomsDad)
        * Epos plugin defaults to ISO 8859-2 encoding.  Pass encoded text to Epos client
          via Stdin rather than command line to avoid encoding problem.

2005-01-07  Gary Cramblitt (PhantomsDad)
        * Start to Filters capability.  StringReplacer Filter implemented in KTTSMgr GUI,
          but not yet implemented in kttsd.

2004-12-31  Gary Cramblitt (PhantomsDad)
        * In KTTSD, if user has not yet configured any Talkers, prompt user and if they click
          Yes, run KTTSMgr.  User has option to turn off prompt.
        * Activate kspeech::showDialog() method.
        * The khmtlktts plugin automatically senses if KTTSD is installed and if not,
          hides menu item.

2004-12-30  Gary Cramblitt (PhantomsDad)
        * Set LANG and LC_CTYPE environment variables before starting subprocess in Epos and
          and Command plugins.  Fix encoding bug in Epos plugin.  Move common encoding routines
          to PluginProc.

2004-12-27  Gary Cramblitt (PhantomsDad)
        * Add encoding option to Festival Interactive Plugin.  When choosing a voice, default the
          encoding option based on voices file.
        * Add support for Polish Festival.

2004-12-21  Gary Cramblitt (PhantomsDad)
        * Require GStreamer 0.8.5 or above in configure.in.in.  SuSE 9.2 users have
          GStreamer 0.8.0, which causes KTTSMgr to immediately crash on startup.

2004-12-20  Gary Cramblitt (PhantomsDad)
        * kdenonbeta/kttsd moved to kdeaccessibility/kttsd.
        * kdenonbeta/kttsd/libktts moved to kdelibs/interfaces/kspeech.  libktts dropped.
        * kdenonbeta/app-plugins/khtml-plugin moved to kdebase/konqueror/kttsplugin.
        * kdenonbeta/app-plugins/kate-plugin moved to kdebase/kate/plugins/ktts.
        * kdenonbeta/app-plugins/katepart-plugin moved to kdebase/kate/plugin/katepartktts.

2004-12-19  Gary Cramblitt (PhantomsDad)